<resources>
    <string name="app_name">Football App</string>
    <string name="date">Date</string>
    <string name="lineup">Lineup</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="home_team">Home Team</string>
    <string name="zero">0</string>
    <string name="strip">-</string>
    <string name="away_team">Away Team</string>
    <string name="goal">Goal</string>
    <string name="shot">Shot</string>
    <string name="home">HOME</string>
    <string name="away">AWAY</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="favorite">Favorite</string>
    <string name="vs">VS</string>
    <string name="teams">Teams</string>

    <array name="leagueName">
        <item>English Premiere League</item>
        <item>English League Championship</item>
        <item>Scottish Premier League</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
        <item>Greek Superleague Greece</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="player">Player</string>
    <string name="stadium">Stadium</string>
    <string name="description">Description</string>
    <string name="year">Year</string>
    <string name="as_position">as</string>
    <string name="player_name">Player Name</string>
    <string name="position">Position</string>
    <string name="weight">Weight(Kg)</string>
    <string name="height_m">Height(m)</string>
    <string name="_1_8m">1,8m</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="player_list">Player List</string>
    <string name="overview_team">Overview Team</string>
    <string name="_65kg">65kg</string>
    <string name="time">Time</string>

</resources>
