<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bnav_team"
        android:enabled="true"
        android:icon="@drawable/ic_team_24dp"
        android:title="@string/teams"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bnav_last"
        android:enabled="true"
        android:icon="@drawable/ic_last_match_24dp"
        android:title="@string/last_match"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bnav_next"
        android:enabled="true"
        android:icon="@drawable/ic_next_match_24dp"
        android:title="@string/next_match"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bnav_fav"
        android:enabled="true"
        android:icon="@drawable/ic_star_24dp"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

</menu>